update workflow